# VoiceRecognizer

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc  stthandler.cpp  stthandler.h
